2013-02-19  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (get_my_settings, edit_my_settings): Add Report
	Filter.

	* src/gsad_omp.c (get_report): Default filt_id value to -2 for more
	consistency.

2013-02-19  Werner Koch  <wk@gnupg.org>

	* src/gsad.c (main): Add option --debug-tls.
	(my_gnutls_log_func): New.
	(main): Print library version numbers with --version if debug-tls
	is also used.

2013-02-19  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (cve-details): Change to hide empty sections if
	no CVE data is found. Change to show "CVSS: None" if only CVSS data is
	missing.
	(cpe-details): Change to hide "Reported vulnerabilities" when CPE is not
	found.
	(ovaldef-details): Change to hide empty sections if no ovaldef data is
	found and show an info message instead. Add h1 tag to
	"Repository history: None".
	(dfn_cert_adv-details): Change to hide empty sections if no advisory
	data is found and show an info message instead.

2013-02-19  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (result-detailed): Fix conditions for references
	boxes to appear.

2013-02-18  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (ref_cert_list, nvt, result-detailed): Add support
	for warning elements in CERT advisory lists.

2013-02-16  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (request_handler): Clear credentials on allocation so that
	params is NULL when exec_omp_get fails with bogus command name.

2013-02-15  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (nvt): Change to hide empty sections completely.

2013-02-14  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (dfn_cert_adv-details): Change to make more
	consistent with other details pages. Get name (advisory ID) from
	raw data.

2013-02-14  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (ovaldef-details): Change to make more consistent
	with other details pages.
